Added the intro text and img
A nice layout was implemented to design the layout
The intro section is made responsive
The background color was also edited

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
         </div>
     </div>
     <main>
-        
+        <div class="intro">
+            <div class="intro-text">
+                <h1>Welcome to Puchi.co — Where Cuteness Meets Charm!</h1>
+                <p>At Pushi.co, we believe that little things make life sweeter. Whether it's adorable accessories or everyday essentials with a playful touch, our products are designed to bring joy and cuteness to your world. We're all about timeless charm, ensuring every item fells special—today and always.</p>
+                <h2>Why Pushi.co?</h2>
+                <ul>
+                    <li>Uniquely Adorable Designs — Our collection is carefully curated to bring you the cutest and most charming products.</li>
+                    <li>Quality & Comfort — We prioritize high-quality materials that are as durable as they are delightful.</li>
+                    <li>Happiness in Every Purchase — Whether you're buying for yourself or a loved one, every item is crafted to spread joy.</li>
+                </ul>
+            </div>
+            <img src="./img/intro-Image.webp" alt="Aesthetic flat lay of skincare products, including lip masks, pimple patches, and face masks, arranged on a soft pastel background. The scene evokes a fresh and soothing self-care vibe.">
+        </div>
     </main>
 </body>
 </html>
