--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <a href="">Sign Up</a>
             </div>
             <div class="right-links">
-                <a href="">Contact Us</a>
-                <a href="">About</a>
-                <a href="">Our Products</a>
+                <a href="#contact-us">Contact Us</a>
+                <a href="#about">About</a>
+                <a href="#products">Our Products</a>
             </div>
         </div>
     </div>
     <main>
-        <div class="intro">
+        <div class="intro" id="home">
             <div class="intro-text">
                 <h1>Welcome to Puchi.co — Where Cuteness Meets Charm!</h1>
                 <p>At Pushi.co, we believe that little things make life sweeter. Whether it's adorable accessories or everyday essentials with a playful touch, our products are designed to bring joy and cuteness to your world. We're all about timeless charm, ensuring every item fells special—today and always.</p>
@@ -39,7 +39,7 @@
             <img src="./img/intro-Image.webp" alt="Aesthetic flat lay of skincare products, including lip masks, pimple patches, and face masks, arranged on a soft pastel background. The scene evokes a fresh and soothing self-care vibe.">
         </div>
 
-        <div class="products-sct">
+        <div class="products-sct" id="products">
             <h2>Ready to add a sprinkle of cuteness to your life?</h2>
             <p>Explore a variety of our collections and fall in love with little things!</p>
         
@@ -74,7 +74,7 @@
         </div>
         
     </main>
-    <section class="about">
+    <section class="about" id="about">
         <h2>About Pushi.co</h2>
         <h3>Timeless Cuteness, Endless Charm</h3>
         <p>
@@ -90,11 +90,11 @@
         <p class="signature">With love, <br> <strong>Pushi.co</strong></p>
     </section>
 
-    <section class="cta">
+    <section class="cta" id="contact-us">
         <h2>Have Questions? We’d Love to Hear from You! 💌</h2>
         <p>Reach out to us through any of our platforms and let’s make your experience delightful.</p>
         <div class="contact-options">
-            <p><strong>Email:</strong> support@pushi.co</p>
+            <p><strong>Email:</strong> mpushi.co@gmail.com</p>
             <p><strong>WhatsApp:</strong> +234 810 123 4567</p>
             <p><strong>Instagram:</strong> <a href="#">@pushi.co</a></p>
         </div>
@@ -104,9 +104,9 @@
         <div class="footer-content">
             <img src="./img/Logo.png" alt="Pushi.co Logo">
             <div class="footer-links">
-                <a href="">Home</a>
-                <a href="">Shop</a>
-                <a href="">Contact Us</a>
+                <a href="#home">Home</a>
+                <a href="#products">Shop</a>
+                <a href="#contact-us">Contact Us</a>
                 <a href="">FAQ</a>
             </div>
             <div class="social-media">
